Profile menu added

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,15 @@
 
     </style>
 
+    <style name="Edittext_names" parent="Theme.AppCompat.Light">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/cardview_light_background</item>
+        <item name="colorPrimaryDark">@color/cardview_light_background</item>
+        <item name="colorAccent">@color/niceyellow</item>
+
+        <item name="colorControlActivated">@color/niceyellow</item>
+        <item name="colorControlHighlight">@color/niceyellow</item>
+
+    </style>
+
 </resources>
