--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#8B0000</color>
 
     <color name="niceyellow">#ffb00f</color>
+    <color name="confirmcolor">#2ECC40</color>
+
 </resources>
