--- a/app/src/main/res/layout/family_fragment.xml
+++ b/app/src/main/res/layout/family_fragment.xml
@@ -33,23 +33,7 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/profile" />
-
-                <Switch
-                    android:id="@+id/switch_always_tracked"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:checked="false"
-                    android:switchPadding="8dp"
-                    android:text="@string/profile_startup_text"
-                    android:textColor="@android:color/background_light"
-                    android:textSize="18sp"
-                    android:thumbTint="@color/niceyellow"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/family_text_layout"
-                    tools:checked="false" />
+                    app:srcCompat="@drawable/familyimg" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -58,13 +42,13 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:text="@string/profile_details"
+                    android:text="@string/family_details"
                     android:textAlignment="viewStart"
                     android:textColor="@android:color/darker_gray"
                     android:textStyle="italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/switch_always_tracked" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/family_text_layout"
@@ -81,21 +65,43 @@
                     app:layout_constraintTop_toBottomOf="@+id/imageView">
 
                     <EditText
-                        android:id="@+id/profile_username"
+                        android:id="@+id/family_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/profile_new_username_hint"
+                        android:hint="@string/family_hint"
                         android:inputType="textPersonName"
                         android:singleLine="true"
                         android:textColor="@android:color/background_light"
                         android:textColorLink="@color/niceyellow"
                         android:theme="@style/Edittext_names" />
                 </android.support.design.widget.TextInputLayout>
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/family_members_count"
+                    android:textColor="@android:color/darker_gray"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/family_text_layout" />
+
+                <TextView
+                    android:id="@+id/family_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="0"
+                    android:textColor="@color/niceyellow"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
+                    app:layout_constraintStart_toEndOf="@+id/textView2"
+                    app:layout_constraintTop_toTopOf="@+id/textView2" />
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/profile_save_btn"
+            android:id="@+id/family_save_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
