--- a/app/src/main/res/drawable/family.xml
+++ b/app/src/main/res/drawable/family.xml
@@ -1,9 +1,191 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+    android:width="915dp"
+    android:height="450dp"
+    android:viewportWidth="915"
+    android:viewportHeight="450">
+
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M16,11c1.66,0 2.99,-1.34 2.99,-3S17.66,5 16,5c-1.66,0 -3,1.34 -3,3s1.34,3 3,3zM8,11c1.66,0 2.99,-1.34 2.99,-3S9.66,5 8,5C6.34,5 5,6.34 5,8s1.34,3 3,3zM8,13c-2.33,0 -7,1.17 -7,3.5L1,19h14v-2.5c0,-2.33 -4.67,-3.5 -7,-3.5zM16,13c-0.29,0 -0.62,0.02 -0.97,0.05 1.16,0.84 1.97,1.97 1.97,3.45L17,19h6v-2.5c0,-2.33 -4.67,-3.5 -7,-3.5z"/>
+        android:fillColor="#3B5998"
+        android:pathData="M 0 0 H 931 V 450 H 0 V 0 Z" />
+    <path
+        android:fillColor="#E67E22"
+        android:pathData="M 392.5 134.5 L 397.8 135.9 L 422.4 149.6 L 432.2 173.4 L 451 154.7 L 467.2 157.5 L 469.2 171.8 L 440.2 183 L 391.1 166.7 Z" />
+    <path
+        android:fillColor="#95A5A6"
+        android:pathData="M 357.5 235.3 L 340 235.3 L 309.6 235.3 L 309.6 252.6 L 312 352.1 L 337.7 352.1 L 342.3 266.2 L 347.5 259.8 L 350.1 259.8 L 355.2 266.2 L 359.9 352.1 L 385.6 352.1 L 387.9 252.6 L 387.9 235.3 Z" />
+    <path
+        android:fillColor="#E67E22"
+        android:pathData="M 313.3 171 L 306 134.5 L 301.7 137.5 L 276.6 183.4 L 272.7 193.1 L 277.8 231 L 295.6 228.7 L 295.1 201.3 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 328.2 91.6 L 326.2 90.5 L 324.4 91 L 324.4 100 L 330.3 105.5 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 369.3 91.6 L 371.3 90.5 L 373.2 91 L 373.2 100 L 367.3 105.5 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M326.2,77.6l28.3-11l5.1-6.4l6.6,7.3c0,0,4.8,12,4.8,12l-2.8,42.2l-19.4,5.4l-19.4-4.9L326.2,77.6z" />
+    <path
+        android:fillColor="#C16800"
+        android:pathData="M326.2,77.6l28.3-11l5.1-6.4l6.6,7.3c0,0,4.8,12,4.8,12L369.5,95h-2.3l-1.6-13.2l-34.2,3.8l-1.7,9.4h-2.1 L326.2,77.6z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M313.5,359.1h22.2c0,0,4.3-9.7-11.1-12.1C324.6,347,311.6,347.8,313.5,359.1z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M383.8,359.1h-22.2c0,0-4.3-9.7,11.1-12.1C372.7,347,385.8,347.8,383.8,359.1z" />
+    <path
+        android:fillColor="#006DB5"
+        android:pathData="M 387.9 235.3 L 357.5 235.3 L 340 235.3 L 309.6 235.3 L 309.6 236.3 L 387.9 235.4 Z" />
+    <path
+        android:fillColor="#488C87"
+        android:pathData="M 406.9 134.2 L 401.6 135.6 L 377.1 149.3 L 367.3 173 L 348.4 154.3 L 332.2 157.2 L 330.3 171.5 L 359.2 182.7 L 408.3 166.3 Z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M 387.9 239.6 L 309.6 239.6 L 305 134.5 L 334.8 134.5 L 348.8 139.4 L 362.4 134.5 L 392.5 134.5 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 334.9 120.9 L 334.9 134.5 L 348.8 137.6 L 362.4 134.5 L 362.4 121.8 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 538.8 122.2 L 538.8 135.8 L 552.6 137.6 L 566.3 135.8 L 566.3 123 Z" />
+    <path
+        android:fillColor="#34495E"
+        android:pathData="M 561.3 235.4 L 543.8 235.4 L 513.4 235.4 L 513.4 252.8 L 515.8 352.2 L 541.4 352.2 L 546.1 266.3 L 551.2 259.9 L 553.9 259.9 L 559 266.3 L 563.6 352.2 L 589.3 352.2 L 591.7 252.8 L 591.7 235.4 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 532 91.7 L 530 90.6 L 528.2 91.1 L 528.2 100.1 L 534 105.6 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 573 91.5 L 575 90.4 L 576.8 91 L 576.8 100 L 571 105.5 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 530 77.7 L 570 67.6 L 574.7 79.6 L 572 121.9 L 552.5 127.2 L 533.1 122.3 Z" />
+    <path
+        android:fillColor="#4C300F"
+        android:pathData="M 530 77.7 L 547.6 70.9 L 570 67.6 L 574.7 79.6 L 573.3 95.1 L 571 95.1 L 569.4 82 L 535.2 85.7 L 533.5 95.1 L 531.3 95.1 Z" />
+    <path
+        android:fillColor="#999999"
+        android:pathData="M517.3,359.2h22.2c0,0,4.3-9.7-11.1-12.1C528.4,347.1,515.3,347.9,517.3,359.2z" />
+    <path
+        android:fillColor="#999999"
+        android:pathData="M587.6,359.2h-22.2c0,0-4.3-9.7,11.1-12.1C576.5,347.1,589.5,347.9,587.6,359.2z" />
+    <path
+        android:fillColor="#006DB5"
+        android:pathData="M 591.7 235.4 L 561.3 235.4 L 543.8 235.4 L 513.4 235.4 L 513.4 236.4 L 591.7 235.5 Z" />
+    <path
+        android:fillColor="#95A5A6"
+        android:pathData="M 591.6 239.7 L 513.4 239.7 L 508.7 134.6 L 531.3 134.6 L 553 138.6 L 573.8 134.6 L 596.3 134.6 Z" />
+    <path
+        android:fillColor="#F0C419"
+        android:pathData="M 552.6 239.7 L 552.6 137.6 L 531.3 134.6 L 547.4 239.7 Z" />
+    <path
+        android:fillColor="#F0C419"
+        android:pathData="M 552.6 239.7 L 552.6 137.6 L 573.8 134.6 L 557.8 239.7 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 436.9 121.7 L 436.9 140.5 L 450.7 147.2 L 464.4 143.3 L 464.4 122.6 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 459.4 235 L 441.9 235 L 411.5 235 L 411.5 252.3 L 415.2 291.1 L 417.5 351.8 L 436.9 351.8 L 440.5 291.1 L 444.2 265.8 L 449.3 259.4 L 452 259.4 L 457.1 265.8 L 461.6 291.1 L 464.2 351.8 L 484.2 351.2 L 485.9 291.1 L 489.8 252.3 L 489.8 235 Z" />
+    <path
+        android:fillColor="#287572"
+        android:pathData="M 459.4 235 L 441.9 235 L 411.5 235 L 411.5 252.3 L 412.4 291 L 442.9 291 L 444.2 265.8 L 449.3 259.4 L 452 259.4 L 457.1 265.8 L 458.4 291.1 L 488.9 291 L 489.8 252.3 L 489.8 235 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 430.1 91.2 L 428.1 90.1 L 426.3 90.7 L 426.3 99.7 L 432.1 105.2 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 471.1 91.1 L 473.1 90 L 474.9 90.5 L 474.9 99.5 L 469.1 105 Z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M 428.1 77.3 L 456.4 66.3 L 472.9 79.2 L 470.1 121.5 L 450.6 126.8 L 431.2 121.9 Z" />
+    <path
+        android:fillColor="#F39C12"
+        android:pathData="M 428.1 77.3 L 441.5 72.1 L 452.8 60.2 L 464.4 69 L 472.9 79.2 L 471.4 94.7 L 469.1 94.7 L 467.5 81.5 L 433.3 85.3 L 431.6 94.7 L 429.4 94.7 Z" />
+    <path
+        android:fillColor="#999999"
+        android:pathData="M415.4,358.7h22.2c0,0,4.3-9.7-11.1-12.1C426.5,346.7,413.4,347.5,415.4,358.7z" />
+    <path
+        android:fillColor="#999999"
+        android:pathData="M485.7,358.7h-22.2c0,0-4.3-9.7,11.1-12.1C474.6,346.7,487.6,347.5,485.7,358.7z" />
+    <path
+        android:fillColor="#006DB5"
+        android:pathData="M 489.8 235 L 459.4 235 L 441.9 235 L 411.5 235 L 411.5 236 L 489.8 235.1 Z" />
+    <path
+        android:fillColor="#63BCB8"
+        android:pathData="M489.7,239.3h-78.2l-4.7-105.1h22.6c0,0,15.6,5.6,21.2,5.6c5.7,0,21.2-5.6,21.2-5.6h22.5L489.7,239.3z" />
+    <path
+        android:fillColor="#E67E22"
+        android:pathData="M 348.8 137.6 L 334.9 134.5 L 348.6 152 L 362.4 134.5 Z" />
+    <path
+        android:fillColor="#34495E"
+        android:pathData="M 396.5 166.1 L 370.4 139.5 L 375.3 137.7 L 427.4 142.7 L 437.6 144.9 L 478.1 160.3 L 468.6 182.3 L 431.8 168 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 327.3 179.8 L 338.6 187.4 L 347.8 177.1 L 354 164.6 L 343.5 157.5 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 298.2 168.3 L 296.2 169.4 L 295.6 171.2 L 303.1 176.2 L 310.9 174.5 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 321.1 134.3 L 321.3 132 L 322.8 130.8 L 330.3 135.8 L 331.5 143.8 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 310.9 124.8 L 286 142 L 277.8 142.6 L 280.1 152.2 L 287.4 162.9 L 323.9 184.3 L 339.3 171.2 L 346.1 152.4 Z" />
+    <path
+        android:fillColor="#865D41"
+        android:pathData="M 310.9 124.8 L 286 142 L 277.8 142.6 L 280.1 152.2 L 287.4 162.9 L 301 170.4 L 302.3 168.5 L 292.3 159.8 L 314.6 133.5 L 323.4 137.4 L 324.5 135.6 Z" />
+    <path
+        android:fillColor="#488C87"
+        android:pathData="M 491.6 143.8 L 472.9 226.8 L 494.4 234.6 L 507.8 176.2 L 508.7 154.5 L 505.7 141.1 L 494.4 134.2 Z" />
+    <path
+        android:fillColor="#6A7A7A"
+        android:pathData="M 503.9 246.1 L 526 245.5 L 522 139.8 L 517.6 134.9 L 508.1 134.3 L 500.8 139.3 L 502.5 210.7 Z" />
+    <path
+        android:fillColor="#3EB6DB"
+        android:pathData="M 436.2 203.2 L 429.9 222.7 L 421.5 252.3 L 462.6 254.4 L 573.5 251.8 L 573.4 227.3 L 476 223.3 L 469.6 220.4 L 469.6 217.9 L 475.9 213 L 513.5 191.8 L 522.3 192.2 L 558.6 223.6 L 570.3 200.8 L 530.9 162.8 L 518.7 158.9 L 462.3 182 L 445 182.1 Z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M580.4,250.3l-0.1-21.1c0,0-9.7-4-12,10.6C568.3,239.8,569.1,252.2,580.4,250.3z" />
+    <path
+        android:fillColor="#34495E"
+        android:pathData="M 462.3 182 L 421.5 252.3 L 394 245.6 L 320.7 211.7 L 333.4 192.9 L 348.9 177.3 L 357.2 157.8 L 369.8 139.2 L 432.3 177.1 Z" />
+    <path
+        android:fillColor="#ECF0F1"
+        android:pathData="M 347.8 177.1 L 333.4 192.9 L 398.7 211.6 Z" />
+    <path
+        android:fillColor="#ECF0F1"
+        android:pathData="M 347.8 177.1 L 357.2 157.8 L 398.7 211.6 Z" />
+    <path
+        android:fillColor="#34495E"
+        android:pathData="M 368.3 228.7 L 282.1 235 L 263.6 217.8 L 286.9 171.5 L 309.1 182.6 L 296.3 208.2 L 334.7 199.3 Z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M558.6,223.6l10.2,3.2l15.1-39.9c0,0-13.6-4.4-13.6,13.9l-2.1,4.3L558.6,223.6z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 394.7 250.3 L 399.2 237.1 L 419 240 L 410.1 255.6 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 509.6 254.5 L 507.8 240.7 L 527 234.6 L 525.8 252.5 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 272.7 235.1 L 273.1 221.1 L 293 218.1 L 289.1 235.6 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 488.4 257.3 L 487.7 243.3 L 467.9 240.6 L 472 258 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 573.5 245.3 L 569.1 258.5 L 549.2 255.7 L 558 240.1 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 364.2 234.8 L 363.6 220.9 L 343.7 218.1 L 347.9 235.6 Z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M 477.1 162.8 L 489.9 168.3 L 485.4 187.9 L 470.6 177.8 Z" />
+    <path
+        android:fillColor="#6A7A7A"
+        android:pathData="M 576.8 246.3 L 555.8 239.7 L 588.9 139.2 L 596.3 134.6 L 603.8 137.7 L 608.6 152 L 588 212.7 Z" />
 </vector>
