--- a/app/src/main/res/layout/family_fragment.xml
+++ b/app/src/main/res/layout/family_fragment.xml
@@ -10,8 +10,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary">
+        android:layout_height="match_parent">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -33,7 +32,7 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/familyimg" />
+                    app:srcCompat="@drawable/ic_family" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -44,7 +43,6 @@
                     android:layout_marginTop="16dp"
                     android:text="@string/family_details"
                     android:textAlignment="viewStart"
-                    android:textColor="@android:color/darker_gray"
                     android:textStyle="italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +56,6 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:focusableInTouchMode="true"
-                    android:theme="@style/Edittext_names"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -70,10 +67,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/family_hint"
                         android:inputType="textPersonName"
-                        android:singleLine="true"
-                        android:textColor="@android:color/background_light"
-                        android:textColorLink="@color/niceyellow"
-                        android:theme="@style/Edittext_names" />
+                        android:singleLine="true" />
                 </android.support.design.widget.TextInputLayout>
 
                 <TextView
@@ -83,7 +77,6 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:text="@string/family_members_count"
-                    android:textColor="@android:color/darker_gray"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/family_text_layout" />
 
@@ -93,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:text="0"
-                    android:textColor="@color/niceyellow"
+                    android:textColor="@color/colorPrimaryDark"
                     app:layout_constraintBottom_toBottomOf="@+id/textView2"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
                     app:layout_constraintTop_toTopOf="@+id/textView2" />
