--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -10,8 +10,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary">
+        android:layout_height="match_parent">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -33,7 +32,7 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/profile" />
+                    app:srcCompat="@drawable/profileimg" />
 
                 <Switch
                     android:id="@+id/switch_always_tracked"
@@ -44,9 +43,7 @@
                     android:checked="false"
                     android:switchPadding="8dp"
                     android:text="@string/profile_startup_text"
-                    android:textColor="@android:color/background_light"
                     android:textSize="18sp"
-                    android:thumbTint="@color/niceyellow"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/family_text_layout"
                     tools:checked="false" />
@@ -60,7 +57,6 @@
                     android:layout_marginTop="16dp"
                     android:text="@string/profile_details"
                     android:textAlignment="viewStart"
-                    android:textColor="@android:color/darker_gray"
                     android:textStyle="italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +70,6 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:focusableInTouchMode="true"
-                    android:theme="@style/Edittext_names"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -86,10 +81,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/profile_new_username_hint"
                         android:inputType="textPersonName"
-                        android:singleLine="true"
-                        android:textColor="@android:color/background_light"
-                        android:textColorLink="@color/niceyellow"
-                        android:theme="@style/Edittext_names" />
+                        android:singleLine="true" />
                 </android.support.design.widget.TextInputLayout>
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
@@ -103,7 +95,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:visibility="visible"
-            app:backgroundTint="@color/niceyellow"
+            app:backgroundTint="@color/colorPrimary"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
