--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="niceyellow">#ffb00f</color>
     <color name="confirmcolor">#32CD32</color>
+    <color name="nice_grey">#d9d9d9</color>
 
 </resources>
