--- a/app/src/main/res/layout/user_info_item.xml
+++ b/app/src/main/res/layout/user_info_item.xml
@@ -23,10 +23,10 @@
                 android:id="@+id/user_last_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="Last update"
-                app:layout_constraintBottom_toTopOf="@+id/item_locate"
+                app:layout_constraintBottom_toTopOf="@+id/user_has_no_position"
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
@@ -68,6 +68,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/user_longitude" />
+
+            <TextView
+                android:id="@+id/user_has_no_position"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/home_user_has_no_position"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@+id/item_locate"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/item_locate"
