--- a/app/src/main/res/menu/activity_i_tracked_drawer.xml
+++ b/app/src/main/res/menu/activity_i_tracked_drawer.xml
@@ -7,16 +7,20 @@
         android:id="@+id/group0">
         <item
             android:id="@+id/menu_home"
-            android:title="@string/nav_home"
-            android:icon="@drawable/home" />
+            android:icon="@drawable/home"
+            android:title="@string/nav_home" />
         <item
-            android:id="@+id/menu_username"
-            android:title="@string/nav_profile"
-            android:icon="@drawable/person" />
+            android:id="@+id/menu_favs"
+            android:icon="@drawable/ic_star_black_24dp"
+            android:title="@string/nav_favs" />
         <item
-            android:id="@+id/menu_family"
-            android:title="@string/nav_family"
-            android:icon="@drawable/family_icon" />
+            android:id="@+id/menu_history"
+            android:icon="@drawable/ic_history_black_24dp"
+            android:title="@string/nav_history" />
+        <item
+            android:id="@+id/menu_settings"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="@string/nav_settings" />
 
     </group>
 
